--- a/app/src/main/res/layout/activity_connection_test.xml
+++ b/app/src/main/res/layout/activity_connection_test.xml
@@ -5,7 +5,7 @@
     android:id="@+id/relativeLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/mColorWhite"
+    android:background="@color/sliderBack"
     tools:context=".Activity.ConnectionTestActivity">
 
     <TextView
