--- a/app/src/main/res/layout/activity_motor.xml
+++ b/app/src/main/res/layout/activity_motor.xml
@@ -6,6 +6,7 @@
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/sliderBack"
     android:gravity="center">
 
     <ImageView
@@ -264,11 +265,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/round_cornered_button_red"
         android:fontFamily="@font/fjalla_one"
         android:text="STOP"
         android:textAlignment="center"
         android:textAllCaps="true"
-        android:background="@drawable/round_cornered_button_red"
         android:textColor="@android:color/black"
         android:textSize="24sp"
         android:textStyle="bold"
