--- a/app/src/main/res/layout/activity_multiplayer_selection.xml
+++ b/app/src/main/res/layout/activity_multiplayer_selection.xml
@@ -5,6 +5,7 @@
     android:id="@+id/relativeLayout3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/sliderBack"
     tools:context=".Activity.MultiplayerSelectionActivity">
 
     <TextView
