--- a/app/src/main/res/layout/activity_play_menu.xml
+++ b/app/src/main/res/layout/activity_play_menu.xml
@@ -5,7 +5,7 @@
     android:id="@+id/play_pager_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/mColorWhite"
+    android:background="@color/sliderBack"
     tools:context=".Activity.PlayMenuActivity">
 
 
