Ora quando l'utente gioca per eliminare un blocco dalla pila basta che prema il blocco nella schermata dei controlli, quindi gli appare un AlertDialog che gli chiede se lo ha eliminato davvero.

--- a/app/src/main/res/layout/activity_motor.xml
+++ b/app/src/main/res/layout/activity_motor.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:gravity="center">
 
-    <ImageView
+    <ImageButton
         android:id="@+id/blockPlaced_4"
         android:layout_width="54dp"
         android:layout_height="33dp"
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:srcCompat="@color/mColorRed" />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/blockPlaced_3"
         android:layout_width="54dp"
         android:layout_height="33dp"
@@ -275,7 +275,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/put_down_button" />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/blockPlaced_1"
         android:layout_width="54dp"
         android:layout_height="33dp"
@@ -286,7 +286,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:srcCompat="@color/mColorRed" />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/blockPlaced_2"
         android:layout_width="54dp"
         android:layout_height="33dp"
