--- a/app/src/main/res/layout/activity_segnalazioni.xml
+++ b/app/src/main/res/layout/activity_segnalazioni.xml
@@ -24,56 +24,58 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/send"
-        android:layout_width="110dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="32dp"
-        android:background="@drawable/round_cornered_button"
-        android:fontFamily="@font/fjalla_one"
-        android:text="INVIA"
-        android:textAllCaps="true"
-        android:textColor="@android:color/black"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <EditText
-        android:id="@+id/editText"
-        android:layout_width="0dp"
-        android:layout_height="300dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="8dp"
-        android:background="@color/mLightGrey"
+        android:id="@+id/email"
+        android:layout_width="228dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="16dp"
         android:ems="10"
         android:fontFamily="@font/fjalla_one"
-        android:inputType="textMultiLine"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/send"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:inputType="textEmailAddress"
+        android:text="email@email.com"
+        android:textSize="12dp"
+        android:visibility="visible"
+        app:layout_constraintStart_toEndOf="@+id/da"
+        app:layout_constraintTop_toTopOf="@+id/da" />
+
+    <TextView
+        android:id="@+id/da"
+        android:layout_width="37dp"
+        android:layout_height="37dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
+        android:fontFamily="@font/fjalla_one"
+        android:text="Da:"
+        android:textAlignment="gravity"
+        android:textSize="18sp"
+        android:visibility="visible"
+        android:gravity="center_vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/body"
+        android:layout_width="359dp"
+        android:layout_height="160dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="12dp"
+        android:text="Scrivi qui le tue segnalazioni"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.03"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/email" />
+
+    <ImageButton
+        android:id="@+id/sendbutton"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:fontFamily="@font/fjalla_one"
-        android:text="Scrivi qui la segnalazione:"
-        android:textAllCaps="false"
-        android:textColor="@color/mLightGrey"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/editText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/email"
+        app:layout_constraintTop_toBottomOf="@+id/textView9"
+        app:srcCompat="@drawable/ic_action_send" />
 
 </android.support.constraint.ConstraintLayout>
