--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,10 +2,14 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-    <!-- Customize your theme here. -->
-    <item name="colorPrimary">@color/mGreen</item>
-    <item name="colorPrimaryDark">@color/mLightGreen</item>
-    <item name="colorAccent">@color/mVeryGreen</item>
-</style>
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/mGreen</item>
+        <item name="colorPrimaryDark">@color/mLightGreen</item>
+        <item name="colorAccent">@color/mVeryGreen</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
