--- a/app/src/main/res/layout/activity_end_game.xml
+++ b/app/src/main/res/layout/activity_end_game.xml
@@ -29,12 +29,12 @@
     <TextView
         android:id="@+id/result"
         android:layout_width="300dp"
-        android:layout_height="60dp"
+        android:layout_height="46dp"
         android:layout_marginTop="2dp"
         android:background="@drawable/round_background_red"
         android:fontFamily="@font/fjalla_one"
         android:gravity="center"
-        android:text="@string/end_game"
+        android:text="HAI PERSO"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
@@ -64,16 +64,15 @@
         android:id="@+id/timeText"
         android:layout_width="162dp"
         android:layout_height="45dp"
-        android:layout_marginBottom="12dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:fontFamily="@font/fjalla_one"
         android:gravity="left|clip_vertical|clip_horizontal"
         android:text="00:00:00"
         android:textAlignment="center"
         android:textColor="@color/mColorBlack"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/pager_end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,12 +81,12 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/pager_end"
         android:layout_width="395dp"
-        android:layout_height="371dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="315dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/timeText" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 
 </android.support.constraint.ConstraintLayout>
