--- a/app/src/main/res/layout/page_endgame.xml
+++ b/app/src/main/res/layout/page_endgame.xml
@@ -162,7 +162,7 @@
         android:layout_marginStart="8dp"
         android:fontFamily="@font/fjalla_one"
         android:gravity="center_vertical|center_horizontal"
-        android:text="00"
+        android:text=""
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintStart_toEndOf="@+id/textView4"
