--- a/app/src/main/res/layout/activity_instruction.xml
+++ b/app/src/main/res/layout/activity_instruction.xml
@@ -11,9 +11,44 @@
         android:id="@+id/webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible"
         android:focusable="true"
-        />
+        android:visibility="visible"
+        tools:layout_editor_absoluteX="168dp"
+        tools:layout_editor_absoluteY="0dp" />
 
+    <Button
+        android:id="@+id/bSoftware"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/round_cornered_button"
+        android:fontFamily="@font/fjalla_one"
+        android:text="SOFTWARE"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/webview" />
+
+    <Button
+        android:id="@+id/bHardware"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/round_cornered_button"
+        android:fontFamily="@font/fjalla_one"
+        android:text="HARDWARE"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bSoftware" />
 
 </android.support.constraint.ConstraintLayout>
