--- a/app/src/main/res/layout/activity_instruction.xml
+++ b/app/src/main/res/layout/activity_instruction.xml
@@ -21,13 +21,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/round_cornered_button"
         android:fontFamily="@font/fjalla_one"
         android:text="SOFTWARE"
         android:textColor="@android:color/black"
-        android:textSize="24sp"
+        android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,13 +38,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="18dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/round_cornered_button"
         android:fontFamily="@font/fjalla_one"
         android:text="HARDWARE"
         android:textColor="@android:color/black"
-        android:textSize="24sp"
+        android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
