--- a/app/src/main/res/layout/activity_end_game.xml
+++ b/app/src/main/res/layout/activity_end_game.xml
@@ -78,15 +78,334 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/result" />
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager_end"
-        android:layout_width="395dp"
-        android:layout_height="315dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+
+    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/tableView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="5dp"
+        android:stretchColumns="1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/timeText">
+
+        <TableRow>
+
+            <TextView
+                android:id="@+id/idnome"
+                android:layout_width="80dp"
+                android:layout_height="45dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/fjalla_one"
+                android:gravity="center"
+                android:text="NOME"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/idnumeroclick"
+                android:layout_width="100dp"
+                android:layout_height="45dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/fjalla_one"
+                android:gravity="center"
+                android:text="# CLICK"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/idtempoclick"
+                android:layout_width="140dp"
+                android:layout_height="45dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/fjalla_one"
+                android:gravity="center"
+                android:text="TEMPO CLICK(ms)"
+                android:textSize="20sp" />
+        </TableRow>
+
+        <TableRow>
+
+            <LinearLayout
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/motor1_left"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="0dp"
+                    android:background="@drawable/rotation"
+                    android:scaleX="-1" />
+
+                <TextView
+                    android:id="@+id/textViewBaseDX"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="0dp"
+                    android:fontFamily="@font/fjalla_one"
+                    android:gravity="center"
+                    android:text="BASE"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/numeroclickbasedx"
+                android:layout_width="60dp"
+                android:layout_height="45dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/fjalla_one"
+                android:gravity="center"
+                android:text="00"
+                android:textSize="30sp" />
+
+            <TextView
+                android:id="@+id/tempoclickbasedx"
+                android:layout_width="60dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="8dp"
+                android:fontFamily="@font/fjalla_one"
+                android:gravity="center"
+                android:text="00"
+                android:textSize="30sp" />
+
+
+        </TableRow>
+
+        <TableRow>
+
+            <LinearLayout
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/motor1_right"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="0dp"
+                    android:background="@drawable/rotation" />
+
+                <TextView
+                    android:id="@+id/textViewBaseSX"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="0dp"
+                    android:fontFamily="@font/fjalla_one"
+                    android:gravity="center"
+                    android:text="BASE"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/numeroclickbasesx"
+                android:layout_width="60dp"
+                android:layout_height="45dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/fjalla_one"
+                android:gravity="center"
+                android:text="00"
+                android:textSize="30sp" />
+
+            <TextView
+                android:id="@+id/tempoclickbasesx"
+                android:layout_width="60dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="8dp"
+                android:fontFamily="@font/fjalla_one"
+                android:gravity="center"
+                android:text="00"
+                android:textSize="30sp" />
+
+
+        </TableRow>
+
+        <TableRow>
+
+            <LinearLayout
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/textView_motor2_left"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="0dp"
+                    android:background="@drawable/arrow" />
+
+                <TextView
+                    android:id="@+id/textViewBraccioDX"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="0dp"
+                    android:fontFamily="@font/fjalla_one"
+                    android:gravity="center"
+                    android:text="BRACCIO"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/numeroclickbracciodx"
+                android:layout_width="60dp"
+                android:layout_height="45dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/fjalla_one"
+                android:gravity="center"
+                android:text="00"
+                android:textSize="30sp" />
+
+            <TextView
+                android:id="@+id/tempoclickbracciodx"
+                android:layout_width="60dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="8dp"
+                android:fontFamily="@font/fjalla_one"
+                android:gravity="center"
+                android:text="00"
+                android:textSize="30sp" />
+        </TableRow>
+
+        <TableRow>
+
+            <LinearLayout
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/textView_motor2_right"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="0dp"
+                    android:background="@drawable/arrow"
+                    android:scaleX="-1" />
+
+                <TextView
+                    android:id="@+id/textViewBraccioSX"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="0dp"
+                    android:fontFamily="@font/fjalla_one"
+                    android:gravity="center"
+                    android:text="BRACCIO"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/numeroclickbracciosx"
+                android:layout_width="60dp"
+                android:layout_height="45dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/fjalla_one"
+                android:gravity="center"
+                android:text="00"
+                android:textSize="30sp" />
+
+            <TextView
+                android:id="@+id/tempoclickbracciosx"
+                android:layout_width="60dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="8dp"
+                android:fontFamily="@font/fjalla_one"
+                android:gravity="center"
+                android:text="00"
+                android:textSize="30sp" />
+        </TableRow>
+
+        <TableRow>
+
+            <LinearLayout
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/textView_motor3_left"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="0dp"
+                    android:background="@drawable/arrow" />
+
+                <TextView
+                    android:id="@+id/textViewManoDX"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="0dp"
+                    android:fontFamily="@font/fjalla_one"
+                    android:gravity="center"
+                    android:text="MANO"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/numeroclickmanodx"
+                android:layout_width="60dp"
+                android:layout_height="45dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/fjalla_one"
+                android:gravity="center"
+                android:text="00"
+                android:textSize="30sp" />
+
+            <TextView
+                android:id="@+id/tempoclickmanodx"
+                android:layout_width="60dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="8dp"
+                android:fontFamily="@font/fjalla_one"
+                android:gravity="center"
+                android:text="00"
+                android:textSize="30sp" />
+        </TableRow>
+
+        <TableRow>
+
+            <LinearLayout
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/textView_motor3_right"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="0dp"
+                    android:background="@drawable/arrow"
+                    android:scaleX="-1" />
+
+                <TextView
+                    android:id="@+id/textViewManoSX"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="0dp"
+                    android:fontFamily="@font/fjalla_one"
+                    android:gravity="center"
+                    android:text="MANO"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/numeroclickmanosx"
+                android:layout_width="60dp"
+                android:layout_height="45dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/fjalla_one"
+                android:gravity="center"
+                android:text="00"
+                android:textSize="30sp" />
+
+            <TextView
+                android:id="@+id/tempoclickmanosx"
+                android:layout_width="60dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="8dp"
+                android:fontFamily="@font/fjalla_one"
+                android:gravity="center"
+                android:text="00"
+                android:textSize="30sp" />
+        </TableRow>
+    </TableLayout>
 
 
 </android.support.constraint.ConstraintLayout>
