--- a/app/src/main/res/layout/activity_segnalazioni.xml
+++ b/app/src/main/res/layout/activity_segnalazioni.xml
@@ -23,32 +23,20 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="228dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="16dp"
-        android:ems="10"
-        android:fontFamily="@font/fjalla_one"
-        android:inputType="textEmailAddress"
-        android:text="email@email.com"
-        android:textSize="12dp"
-        android:visibility="visible"
-        app:layout_constraintStart_toEndOf="@+id/da"
-        app:layout_constraintTop_toTopOf="@+id/da" />
-
     <TextView
         android:id="@+id/da"
-        android:layout_width="37dp"
+        android:layout_width="336dp"
         android:layout_height="37dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
+        android:layout_marginEnd="8dp"
         android:fontFamily="@font/fjalla_one"
-        android:text="Da:"
-        android:textAlignment="gravity"
+        android:gravity="center_vertical"
+        android:text="Facci sapere cosa non va"
+        android:textAlignment="center"
         android:textSize="18sp"
         android:visibility="visible"
-        android:gravity="center_vertical"
+        app:layout_constraintEnd_toStartOf="@+id/sendbutton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
@@ -57,23 +45,21 @@
         android:layout_width="359dp"
         android:layout_height="160dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="12dp"
         android:text="Scrivi qui le tue segnalazioni"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.03"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email" />
+        app:layout_constraintTop_toBottomOf="@+id/da" />
 
     <ImageButton
         android:id="@+id/sendbutton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/email"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
         app:srcCompat="@drawable/ic_action_send" />
 
